Replaced project files